--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <title>Hans J Schroeder</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript></noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
